fix to content padding on mobile

--- a/sass/hyde.scss
+++ b/sass/hyde.scss
@@ -204,6 +204,8 @@ img {
 .content {
   padding-top: 4rem;
   padding-bottom: 4rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .transition-content {
